--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
                   Desarrollo de una aplicación para el manejo de los clubs que se imparten en la Universidad
                 </li>
                 <li>
-                  Participé activamente como programador Back-End y auxiliar en programación Front-End
+                  Participé activamente como programador Front-End
                 </li>
               </ul>
             </div>
