--- a/index.html
+++ b/index.html
@@ -360,7 +360,38 @@
           <h2>Portafolio</h2>
           <!-- <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p> -->
         </div>
+        <div class="col-lg- d-flex align-items-stretch" >
+          <div class="info" style="background-color: black ;">
+            
+            <div class="email">
+              <h4>Indice De Exclusion Educativa</h4>
+              <p>Uso de herramientas, angular, consumo de api rest, libreria leaflet</p>
+            </div>
+<br>
+            <div class="phone">
+              <h4>Hotel Punta Agave</h4>
+              <p>Desarrollado en Angular</p>
+            </div>
+<br>
+            <div class="phone">
+              <h4>CRM Plataforma para tareas</h4>
+              <p>Desarrollado en Angular</p>
+            </div>
+<br>
+            <div class="phone">
+              <h4>UnsiSmile</h4>
+              <p>aplicación para la gestión de expedientes clinicos usando Angular</p>
+            </div>
+<br>
+            <div class="phone">
+              <h4>Gestion de Clubes</h4>
+              <p>aplicación para el manejo de los clubs que se imparten en la Universidad usando Angular</p>
+            </div>
+<br>
+            <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe> -->
+          </div>
 
+        </div>
 
         <div class="row portfolio-container" data-aos="fade-up" data-aos-delay="100">
 
