--- a/index.html
+++ b/index.html
@@ -102,30 +102,25 @@
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Desarrollador Web &amp; Diseñador</h3>
-            <p class="fst-italic">
-              Como desarrollador web y diseñador, me especializo en crear experiencias digitales cautivadoras y funcionales. Mi enfoque está en la creación de diseños intuitivos y el desarrollo de sitios web de alto rendimiento que cumplan con las necesidades y expectativas esperadas
-             </p>
+         
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Cumpleaños:</strong> <span>28 Octubre</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Teléfono:</strong> <span>+52 951 400 8591</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Ciudad:</strong> <span>Oaxaca, Miahuatlan</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Edad:</strong> <span>23</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Grado:</strong> <span>Estudiante</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Correo:</strong> <span>elioenai.2001@outlook.com</span></li>
                 </ul>
               </div>
             </div>
             <p class="fst-italic">
-              Mi fascinación por la tecnología y el diseño va de la mano con mi amor por el audio y la música. Me encanta explorar la intersección entre estos mundos, experimentando con software de edición de audio y creando pistas originales. La música es una fuente constante de inspiración que impulsa mi creatividad en todos mis proyectos, desde el diseño de interfaces hasta el desarrollo de sitios web dinámicos.
+              Como desarrollador web y diseñador, me especializo en crear experiencias digitales cautivadoras y funcionales. Mi enfoque está en la creación de diseños intuitivos y el desarrollo de sitios web de alto rendimiento que cumplan con las necesidades y expectativas esperadas
+             </p>
 
-
-            </p>
           </div>
         </div>
 
@@ -192,74 +187,80 @@
           <div class="col-lg-3 col-md-4">
             <div class="icon-box">
               <i class="fab fa-html5" style="color: #ff5828;"></i>
-              <h3>HTML</h3>
+              <h3>HTML5 - 3 años</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="fab fa-css3-alt" style="color: #5578ff;"></i>
-              <h3>CSS</h3>
+              <h3>CSS - 3 años</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box">
               <i class="fab fa-js-square" style="color: #e8d903;"></i>
-              <h3>JavaScript</h3>
+              <h3>JavaScript - 1 año</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box">
               <i class="fab fa-angular" style="color: #e83535;"></i>
-              <h3>Angular</h3>
+              <h3>Angular - 1 año</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="fab fa-php" style="color: #8147ff;"></i>
-              <h3>PHP</h3>
+              <h3>PHP - 1 año</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="fab fa-bootstrap" style="color: #e8d903;"></i>
-              <h3>Bootstrap</h3>
+              <h3>Bootstrap - 3 años</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="fab fa-laravel" style="color: #f72727;"></i>
-              <h3>Laravel</h3>
+              <h3>Laravel - 1 año</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="fab fa-linux" style="color: #03e83c;"></i>
-              <h3>Linux</h3>
+              <h3>Linux - 2 años</h3>
             </div>  
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="fab fa-git" style="color: #e86603;"></i>
-              <h3>Git</h3>
+              <h3>Git - 2 años</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             
             <div class="icon-box">
               <i class="fab fa-github-square" style="color: #ffffff;"></i>
-              <h3>Git Hub</h3>
+              <h3>Git Hub - 2 años</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="fab fa-figma" style="color: #8903e8;"></i>
-              <h3>Figma</h3>
+              <h3>Figma - 1 año</h3>
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-4 mt-4">
+            <div class="icon-box">
+              <i class="fab fa-java" style="color: #0379e8;"></i>
+              <h3>Java - 1 año</h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box">
               <i class="fab fa-bitbucket" style="color: #0379e8;"></i>
-              <h3>Bitbucket</h3>
+              <h3>Bitbucket - 1 año</h3>
             </div>
         </div>
   
