--- a/index.html
+++ b/index.html
@@ -53,13 +53,13 @@
     <div class="d-flex flex-column">
 
       <div class="profile">
-        <img src="assets/img/profile.jpg" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/portfolio/PROFILE2.jpg" alt="" class="img-fluid rounded-circle">
         <h1 class="text-light"><a href="index.html">Elioenai Antonio</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
+          <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
           <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
@@ -98,7 +98,7 @@
 
         <div class="row">
           <div class="col-lg-4" data-aos="fade-right">
-            <img src="assets/img/profile.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/PROFILE2.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
             <h3>Desarrollador Web &amp; Diseñador</h3>
@@ -365,27 +365,27 @@
           <div class="info" style="background-color: black ;">
             
             <div class="email">
-              <h4>Indice De Exclusion Educativa</h4>
+              <h4><strong>Indice De Exclusion Educativa</strong></h4>
               <p>Uso de herramientas, angular, consumo de api rest, libreria leaflet</p>
             </div>
 <br>
             <div class="phone">
-              <h4>Hotel Punta Agave</h4>
+              <h4><strong>Hotel Punta Agave</strong></h4>
               <p>Desarrollado en Angular</p>
             </div>
 <br>
             <div class="phone">
-              <h4>CRM Plataforma para tareas</h4>
+              <h4><strong>CRM Plataforma para tareas</strong></h4>
               <p>Desarrollado en Angular</p>
             </div>
 <br>
             <div class="phone">
-              <h4>UnsiSmile</h4>
+              <h4><strong>UnsiSmile</strong></h4>
               <p>aplicación para la gestión de expedientes clinicos usando Angular</p>
             </div>
 <br>
             <div class="phone">
-              <h4>Gestion de Clubes</h4>
+              <h4><strong>Gestion de Clubes</strong></h4>
               <p>aplicación para el manejo de los clubs que se imparten en la Universidad usando Angular</p>
             </div>
 <br>
@@ -398,9 +398,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/puntaagave.png" class="img-fluid" alt="">
+              <img src="assets/img/pa.png" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/puntaagave.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/pa.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="App 1"><i class="bx bx-plus"></i></a>
                 <a href="https://puntaagave.com/#/home" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
