--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
         <h1 class="text-light"><a href="index.html">Elioenai Antonio</a></h1>
         <div class="social-links mt-3 text-center">
           <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
+          <a href="https://www.facebook.com/elioenai.antonio.1" class="facebook"><i class="bx bxl-facebook"></i></a>
+          <a href="https://www.instagram.com/elioenai_js/" class="instagram"><i class="bx bxl-instagram"></i></a>
           <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="https://www.linkedin.com/in/salvador-elioenai-antonio-p%C3%A9rez-850a5a277/" class="linkedin"><i class="bx bxl-linkedin"></i></a>
         </div>
       </div>
 
